--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <form>
-        <fieldset action="https://repani145.github.io/login01/">
+    <form action="https://repani145.github.io/login01/">
+        <fieldset>
             <legend><h2>Final Page</h2></legend>
             <label for="pswd">Create password :</label>
             <input type="password" name="pswd" id="pswd" placeholder="create password"/><br><br>
