--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <input type="password" name="pswd" id="pswd" placeholder="create password"/><br><br>
             <label for="pswd">Re-enter password :</label>
             <input type="pswd" name="pswd" id="pswd" placeholder="re-enter your password"/><br><br>
-            <button type="submit">create_account and proceed_to_login</button>
+            <center><button type="submit">create_account and proceed_to_login</button></center>
         </fieldset>
     </form>
     
