--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <fieldset>
             <legend><h2>Final Page</h2></legend>
             <label for="pswd">Create password :</label>
-            <input type="password" name="pswd" id="pswd" placeholder="create password"/><br><br>
+            <input type="password" name="pswd" id="pswd" placeholder="create password" required/><br><br>
             <label for="pswd">Re-enter password :</label>
-            <input type="pswd" name="pswd" id="pswd" placeholder="re-enter your password"/><br><br>
+            <input type="pswd" name="pswd" id="pswd" placeholder="re-enter your password" required/><br><br>
             <center><button type="submit">create_account and proceed_to_login</button></center>
         </fieldset>
     </form>
